--- a/templates/panel.html
+++ b/templates/panel.html
@@ -63,6 +63,7 @@
             background-color: lightgray;
             color: black;
         }
+        
     </style>
 </head>
 <body>
@@ -71,8 +72,19 @@
         <input type="number" id="samplingPeriod" name="samplingPeriod" min="1" value="10" step="1">
         <button class="button" onclick="updatePeriod()">Set Sampling Period</button>
     </div>
-
+    <button id="toggleTemp" class="button" value="off" onclick="toggleTemp(this)">Temperature Control Unit is <span class="button_off">OFF</span></button>    
+    <div class="input-container">
+        <input type="number" id="goalTemp" name="goalTemp" min="15" max="35" value="25" step="1">
+        <button class="button" onclick="updateGoalTemp()">Set Temperature Goal</button>
+    </div>
+    <button id="exitButton" class="button" value="off" onclick="exitButton(this)">Close Monitoring System</span></button>    
     <script>
+        function exitButton(button) {  
+            let xhr = new XMLHttpRequest();
+            xhr.open('POST', '/close_sys', true);
+            xhr.send();
+        }
+        
         function toggleFan(button) {
             let state = button.innerHTML.includes('OFF') ? 'ON' : 'OFF';
             button.value = state
@@ -87,10 +99,31 @@
             xhr.setRequestHeader('Content-Type', 'application/json');
             xhr.send(JSON.stringify({ samplingPeriod: samplingPeriod, state: state }));
         }
-
+        
         function updatePeriod() {
             const samplingPeriod = document.getElementById('samplingPeriod').value;
             alert(`Sampling Period updated to: ${samplingPeriod}`);
+        }
+        
+        function toggleTemp(button) {
+            let state = button.innerHTML.includes('OFF') ? 'ON' : 'OFF';
+            button.value = state
+
+            let state_style = ["button_", state].join('');
+            button.innerHTML = `Temperature Control Unit is <span class="${state_style.toLowerCase()}">${state.toUpperCase()}</span>`;
+
+            const goalTemp = document.getElementById('goalTemp').value;
+
+            let xhr = new XMLHttpRequest();
+            xhr.open('POST', '/toggle_temperature_control', true);
+            xhr.setRequestHeader('Content-Type', 'application/json');
+            xhr.send(JSON.stringify({ state: state, goalTemp: goalTemp}));
+            }
+
+        function updateGoalTemp() {
+            const goalTemp = document.getElementById('goalTemp').value;
+            alert(`Temperature Goal updated to: ${goalTemp}`);
+
         }
     </script>
 </body>
